--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,8 +25,8 @@ jobs:
       - uses: actions/checkout@v5
       - name: Prepare environment
         run: |
-          sudo apt update
-          sudo apt install -y libtool libtool-bin gperf python3-docutils autopoint gettext automake autoconf m4
+          sudo DEBIAN_FRONTEND=noninteractive apt update
+          sudo DEBIAN_FRONTEND=noninteractive apt install -y libtool libtool-bin libltdl-dev gperf python3-docutils autopoint gettext automake autoconf m4
       - name: Run shellcheck
         run: sh ./trunk/tools/shellcheck.sh || true
       - name: Prepare toolchain
@@ -35,18 +35,31 @@ jobs:
           sh dl_toolchain.sh
       - name: Start build
         run: |
+          set -e
           cd trunk
-          mkdir -p ${images_dir}
-          for m in $targets; do fakeroot ./build_firmware_ci $m; \
-          if [ $? = 0 ]; then cp -f images/*.trx ${images_dir}/$m.trx; else exit 1; fi; \
-          ./clear_tree_simple >/dev/null 2>&1; done
+          mkdir -p "${images_dir}"
+          for m in $targets; do
+            fakeroot ./build_firmware_ci "$m"
+            if [ $? -eq 0 ]; then
+              cp -f images/*.trx "${images_dir}/$m.trx"
+            else
+              exit 1
+            fi
+            ./clear_tree_simple >/dev/null 2>&1
+          done
       - name: Create archive
         if: ${{ github.event_name != 'release' && success() }}
         run: |
-          ls -lh ${images_dir}
-          GIT_VERSION=`git rev-parse --short=7 HEAD 2>/dev/null` && [ -n "$GIT_VERSION" ] && \
-          image_name=images_${build_variant}_${GIT_VERSION} || image_name=images_${build_variant}
-          cd ${images_dir}; md5sum *.trx |tee md5sum.txt; 7z a -mx=9 ${image_name}.7z ./*
+          ls -lh "${images_dir}"
+          GIT_VERSION=$(git rev-parse --short=7 HEAD 2>/dev/null)
+          if [ -n "$GIT_VERSION" ]; then
+            image_name="images_${build_variant}_${GIT_VERSION}"
+          else
+            image_name="images_${build_variant}"
+          fi
+          cd "${images_dir}"
+          md5sum *.trx | tee md5sum.txt
+          7z a -mx=9 "${image_name}.7z" ./*
           echo "image_name=${image_name}" >> $GITHUB_ENV
       - name: Upload images to Artifact
         if: ${{ github.event_name != 'release' && success() }}
@@ -64,4 +77,4 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: $](#)
+          file: ${{ env.images_dir }}/*.7z
